@@ -6,7 +6,7 @@
 # Change 1..1 below to 1..last_test_to_print .
 # (It may become useful if the test is moved to ./t subdirectory.)
 
-BEGIN { $| = 1; print "1..1\n"; }
+BEGIN { $tests = 4; $| = 1; print "1..$tests\n"; }
 END {print "not ok 1\n" unless $loaded;}
 use DBIx::Connect;
 $loaded = 1;
@@ -18,3 +18,26 @@ print "ok 1\n";
 # (correspondingly "not ok 13") depending on the success of chunk 13
 # of the test code):
 
+# This should succeed.  Tests basic functionality (i.e. does it return a valid
+# $dbh.
+$test = 2;
+$ENV{DBIX_CONN} = "testconf";
+eval {
+$dbh = DBIx::Connect->to("test1");
+};
+
+defined $dbh ? print "ok $test\n" : print "not ok $test\n";
+
+# This should succeed.  Verifies we can use multiple configs in one file.
+$test++;
+eval {
+$dbh = DBIx::Connect->to("test2");
+};
+defined $dbh ? print "ok $test\n" : print "not ok $test\n";
+
+# This should fail.  "undefined" is not defined in our test config file.
+$test++;
+eval {
+$dbh = DBIx::Connect->to("undefined");
+};
+not defined $dbh ? print "ok $test\n" : print "not ok $test\n";
